# brisk-benchmarks

./: .gitignore  README.org  brisk-benchmarks.cabal  overview.md  stack.yaml  test  todo.org
promela/: .gitignore  nspin  output  output2  run.hs
promela/AsyncP/: asyncp.pml
promela/Common/: defs.pml  expand.pl
promela/ConcDB/: concdb.pml
promela/DistDB/: distdb.pml
promela/Firewall/: firewall.pml
promela/LockServer/: lockserver.pml
promela/MapReduce/: mapreduce.pml
promela/MultiPing/: multiping.pml
promela/Parikh/: parikh.pml
promela/PingDet/: pingdet.pml
promela/PingIter/: pingiter.pml
promela/PingSym/: pingsym.pml
promela/PingSym2/: pingsym2.pml
promela/Registry/: registry.pml
promela/TwoBuyers/: twobuyers.pml
promela/TwoPhaseCommit/: twophasecommit.pml  twophasecommit.pml.exp
promela/WorkSteal/: workstealing.pml
promela/WorkStealing/: workstealing.pml
src/: Main.hs
src/AsyncP/: Master.hs  PingServer.hs
src/AsyncPWithRace/: Master.hs  PingServer.hs
src/AsyncPWrongType/: Master.hs  PingServer.hs
src/Auction/: Buyer.hs  Master.hs  Seller.hs  Utils.hs
src/ConcDB/: Client.hs  Database.hs  Utils.hs
src/DistDB/: Client.hs  Database.hs  Utils.hs  Worker.hs
src/Firewall/: Client.hs  Firewall.hs  Master.hs  Server.hs  Utils.hs
src/FirewallWrongPid/: Client.hs  Firewall.hs  Master.hs  Server.hs  Utils.hs
src/LockServer/: Client.hs  Master.hs  Server.hs  Utils.hs
src/MapReduce/: MapReduce.hs  Mapper.hs  Master.hs  Queue.hs  Utils.hs
src/MapReduceCF/: MapReduce.hs  Mapper.hs  Master.hs  Queue.hs  Utils.hs
src/MapReduceNoMaster/: MapReduce.hs  Mapper.hs  Master.hs  Queue.hs  Utils.hs
src/MapReduceNoReduce/: MapReduce.hs  Mapper.hs  Master.hs  Queue.hs  Utils.hs
src/MapReduceNoTerm/: MapReduce.hs  Mapper.hs  Master.hs  Queue.hs  Utils.hs
src/MapReduceNoWork/: MapReduce.hs  Mapper.hs  Master.hs  Queue.hs  Utils.hs
src/MultiPing/: Master.hs  PingServer.hs
src/Parikh/: Client.hs  Master.hs  Server.hs  Utils.hs
src/PingDet/: Master.hs  PingServer.hs
src/PingIter/: Master.hs  PingServer.hs
src/PingSym/: Master.hs  PingServer.hs
src/PingSym2/: Master.hs  Master2.hs  PingServer.hs  Utils.hs
src/Registry/: Client.hs  Master.hs  Registry.hs  Utils.hs
src/ResShare/: Client.hs  Master.hs  Server.hs  Utils.hs
src/TwoBuyers/: Buyer1.hs  Buyer2.hs  Master.hs  Seller.hs  Utils.hs
src/TwoPhaseCommit/: TwoPhaseCommit.hs
src/WorkSteal/: Mapper.hs  Queue.hs  Utils.hs
src/WorkStealCF/: Mapper.hs  Queue.hs  Utils.hs
