name:                brisk-benchmarks
version:             0.1.0.0
homepage:            https://github.com/gokhankici/brisk-benchmarks
author:              Rami Gokhan Kici
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable brisk-benchmarks
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -Wall -with-rtsopts=-N3
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , system-filepath
                     , text
                     , ansi-terminal
                     , parallel-io

library
  hs-source-dirs:      src
  ghc-options:         -fplugin Brisk.Plugin -package distributed-static -fforce-recomp

  exposed-modules:     MapReduce.Mapper
                     , MapReduce.Master
                     , MapReduce.Queue
                     , MapReduce.Utils
                     , AsyncP.PingServer
                     , AsyncP.Master
                     , MultiPing.PingServer
                     , MultiPing.Master
                     , ConcDB.Utils
                     , ConcDB.Client
                     , ConcDB.Database

  other-modules:       MapReduce.MapReduce

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brisk
                     , brisk-prelude
                     , distributed-process
                     , binary
                     , turtle
                     , system-filepath
                     , text
                     , transformers
