name:                brisk-benchmarks
version:             0.1.0.0
homepage:            https://github.com/gokhankici/brisk-benchmarks
author:              Rami Gokhan Kici
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable brisk-benchmarks
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -Wall -with-rtsopts=-N2
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , system-filepath
                     , text
                     , ansi-terminal
                     , parallel-io
                     , concurrent-extra

library
  hs-source-dirs:      src
  ghc-options:         -fplugin Brisk.Plugin -package distributed-static -fforce-recomp

  exposed-modules:     MapReduce.Mapper
                     , MapReduce.Master
                     , MapReduce.Queue
                     , MapReduce.Utils
                     , WorkSteal.Mapper
                     , WorkSteal.Queue
                     , WorkSteal.Utils
                     , AsyncP.PingServer
                     , AsyncP.Master
                     , PingDet.PingServer
                     , PingDet.Master
                     , PingIter.PingServer
                     , PingIter.Master
                     , PingSym.PingServer
                     , PingSym.Master
                     , PingSym2.PingServer
                     , PingSym2.Master
                     , PingSym2.Master2
                     , PingSym2.Utils
                     , MultiPing.PingServer
                     , MultiPing.Master
                     , ConcDB.Utils
                     , ConcDB.Client
                     , ConcDB.Database
                     , DistDB.Utils
                     , DistDB.Client
                     , DistDB.Worker
                     , DistDB.Database
                     , Registry.Utils
                     , Registry.Client
                     , Registry.Registry
                     , Registry.Master
                     , Firewall.Utils
                     , Firewall.Client
                     , Firewall.Server
                     , Firewall.Firewall
                     , Firewall.Master
                     , Parikh.Client
                     , Parikh.Server
                     , Parikh.Master
                     , Parikh.Utils
                     , TwoBuyers.Utils
                     , TwoBuyers.Buyer1
                     , TwoBuyers.Buyer2
                     , TwoBuyers.Seller
                     , TwoBuyers.Master
                     -- , Auction.Utils
                     -- , Auction.Master
                     -- , Auction.Buyer
                     -- , Auction.Seller
                     , LockServer.Utils
                     , LockServer.Client
                     , LockServer.Server
                     , LockServer.Master
                     
  other-modules:       MapReduce.MapReduce

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brisk
                     , brisk-prelude
                     , distributed-process
                     , binary
                     , turtle
                     , system-filepath
                     , text
                     , transformers
