name:                brisk-benchmarks
version:             0.1.0.0
homepage:            https://github.com/gokhankici/brisk-benchmarks
author:              Rami Gokhan Kici
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable brisk-benchmarks
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -Wall -with-rtsopts=-N2
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , system-filepath
                     , text
                     , ansi-terminal
                     , parallel-io
                     , concurrent-extra
                     , foldl

library
  hs-source-dirs:      src
  ghc-options:         -fplugin Brisk.Plugin -package distributed-static
  -- -fforce-recomp

  exposed-modules:     MapReduce.Mapper
                     , MapReduce.Master
                     , MapReduce.Queue
                     , MapReduce.Utils
                     , WorkSteal.Mapper
                     , WorkSteal.Queue
                     , WorkSteal.Utils
                     , AsyncP.PingServer
                     , AsyncP.Master
                     , PingDet.PingServer
                     , PingDet.Master
                     , PingIter.PingServer
                     , PingIter.Master
                     , PingSym.PingServer
                     , PingSym.Master
                     , PingSym2.PingServer
                     , PingSym2.Master
                     , PingSym2.Master2
                     , PingSym2.Utils
                     , MultiPing.PingServer
                     , MultiPing.Master
                     , ConcDB.Utils
                     , ConcDB.Client
                     , ConcDB.Database
                     , DistDB.Utils
                     , DistDB.Client
                     , DistDB.Worker
                     , DistDB.Database
                     , Registry.Utils
                     , Registry.Client
                     , Registry.Registry
                     , Registry.Master
                     , Firewall.Utils
                     , Firewall.Client
                     , Firewall.Server
                     , Firewall.Firewall
                     , Firewall.Master
                     , Parikh.Client
                     , Parikh.Server
                     , Parikh.Master
                     , Parikh.Utils
                     , TwoBuyers.Utils
                     , TwoBuyers.Buyer1
                     , TwoBuyers.Buyer2
                     , TwoBuyers.Seller
                     , TwoBuyers.Master
                     , LockServer.Utils
                     , LockServer.Client
                     , LockServer.Server
                     , LockServer.Master

                     -- negative benchmarks
                     , MapReduceNoWork.Mapper
                     , MapReduceNoWork.Master
                     , MapReduceNoWork.Queue
                     , MapReduceNoWork.Utils
                     , MapReduceNoTerm.Mapper
                     , MapReduceNoTerm.Master
                     , MapReduceNoTerm.Queue
                     , MapReduceNoTerm.Utils
                     , MapReduceCF.Mapper
                     , MapReduceCF.Master
                     , MapReduceCF.Queue
                     , MapReduceCF.Utils
                     , MapReduceNoMaster.Mapper
                     , MapReduceNoMaster.Master
                     , MapReduceNoMaster.Queue
                     , MapReduceNoMaster.Utils
                     , MapReduceNoReduce.Mapper
                     , MapReduceNoReduce.Master
                     , MapReduceNoReduce.Queue
                     , MapReduceNoReduce.Utils
                     , AsyncPWrongType.PingServer
                     , AsyncPWrongType.Master
                     , AsyncPWithRace.PingServer
                     , AsyncPWithRace.Master
                     , FirewallWrongPid.Utils
                     , FirewallWrongPid.Client
                     , FirewallWrongPid.Server
                     , FirewallWrongPid.Firewall
                     , FirewallWrongPid.Master
                     , WorkStealCF.Mapper
                     , WorkStealCF.Queue
                     , WorkStealCF.Utils
                     
  other-modules:       MapReduce.MapReduce

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brisk
                     , brisk-prelude
                     , distributed-process
                     , binary
                     , turtle
                     , system-filepath
                     , text
                     , transformers
                     , directory
